--- a/app/module/drivers/kscan/CMakeLists.txt
+++ b/app/module/drivers/kscan/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 The ZMK Contributors
+# Copyright (c) 2020-2023 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
 zephyr_library_amend()
