--- a/app/module/drivers/kscan/Kconfig
+++ b/app/module/drivers/kscan/Kconfig
@@ -5,7 +5,7 @@ DT_COMPAT_ZMK_KSCAN_COMPOSITE := zmk,kscan-composite
 DT_COMPAT_ZMK_KSCAN_GPIO_DEMUX := zmk,kscan-gpio-demux
 DT_COMPAT_ZMK_KSCAN_GPIO_DIRECT := zmk,kscan-gpio-direct
 DT_COMPAT_ZMK_KSCAN_GPIO_MATRIX := zmk,kscan-gpio-matrix
-DT_COMPAT_ZMK_KSCAN_GPIO_CHARLIPLEX := zmk,kscan-gpio-charliplex
+DT_COMPAT_ZMK_KSCAN_GPIO_CHARLIEPLEX := zmk,kscan-gpio-charlieplex
 DT_COMPAT_ZMK_KSCAN_MOCK := zmk,kscan-mock
 
 if KSCAN
@@ -34,9 +34,9 @@ config ZMK_KSCAN_GPIO_MATRIX
     default $(dt_compat_enabled,$(DT_COMPAT_ZMK_KSCAN_GPIO_MATRIX))
     select ZMK_KSCAN_GPIO_DRIVER
 
-config ZMK_KSCAN_GPIO_CHARLIPLEX
+config ZMK_KSCAN_GPIO_CHARLIEPLEX
     bool
-    default $(dt_compat_enabled,$(DT_COMPAT_ZMK_KSCAN_GPIO_CHARLIPLEX))
+    default $(dt_compat_enabled,$(DT_COMPAT_ZMK_KSCAN_GPIO_CHARLIEPLEX))
     select ZMK_KSCAN_GPIO_DRIVER
 
 if ZMK_KSCAN_GPIO_MATRIX
@@ -64,9 +64,9 @@ config ZMK_KSCAN_MATRIX_WAIT_BETWEEN_OUTPUTS
 
 endif # ZMK_KSCAN_GPIO_MATRIX
 
-if ZMK_KSCAN_GPIO_CHARLIPLEX
+if ZMK_KSCAN_GPIO_CHARLIEPLEX
 
-config ZMK_KSCAN_CHARLIPLEX_WAIT_BEFORE_INPUTS
+config ZMK_KSCAN_CHARLIEPLEX_WAIT_BEFORE_INPUTS
     int "Ticks to wait before reading inputs after an output set active"
     default 0
     help
@@ -76,8 +76,8 @@ config ZMK_KSCAN_CHARLIPLEX_WAIT_BEFORE_INPUTS
         the number of ticks to wait after setting an output active before reading
         the inputs for their active state.
 
-config ZMK_KSCAN_CHARLIPLEX_WAIT_BETWEEN_OUTPUTS
-    int "Ticks to wait between each output when scanning charliplex matrix"
+config ZMK_KSCAN_CHARLIEPLEX_WAIT_BETWEEN_OUTPUTS
+    int "Ticks to wait between each output when scanning charlieplex matrix"
     default 0
     help
         When iterating over each output to drive it active, read inputs, then set
@@ -86,7 +86,7 @@ config ZMK_KSCAN_CHARLIPLEX_WAIT_BETWEEN_OUTPUTS
         scenario, set this value to a positive value to configure the number of
         usecs to wait after reading each column of keys.
 
-endif # ZMK_KSCAN_GPIO_CHARLIPLEX
+endif # ZMK_KSCAN_GPIO_CHARLIEPLEX
 
 config ZMK_KSCAN_MOCK_DRIVER
     bool
