--- a/app/module/dts/bindings/kscan/zmk,kscan-gpio-charlieplex.yaml
+++ b/app/module/dts/bindings/kscan/zmk,kscan-gpio-charlieplex.yaml
@@ -1,9 +1,9 @@
 # Copyright (c) 2023 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
-description: GPIO keyboard charliplex matrix controller
+description: GPIO keyboard charlieplex matrix controller
 
-compatible: "zmk,kscan-gpio-charliplex"
+compatible: "zmk,kscan-gpio-charlieplex"
 
 include: kscan.yaml
 
